--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 _site/
 .sass-cache/
 stylesheets/.sass-cache/
-#stylesheets/*.css
 *.swp
 .bundle/install.log
+# Ignore bundler installed binaries
+bin/
